tests/valid/shadowing/let_initializer_shadow_borrow_ok.facet
fn f(x: unrestricted isize) -> unrestricted () {
  let x = (&x);
  ()
}
