tests/invalid/lifetime/elision_output_no_input.facet
fn bad() -> unrestricted &unrestricted isize {
    1
}
